fixed dropdown z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -128,6 +128,7 @@ nav .pages a:hover{
     border-radius: 10px;
     overflow: hidden;
     display: none;
+    z-index: 100;
 
     transition: height 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
